// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Phone field metadata tests suite It should fail to create primary phone field with conflicting country code and calling code 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Provided country code and calling code are conflicting",
  },
]
`;

exports[`Phone field metadata tests suite It should fail to create primary phone field with conflicting country code and calling code 2`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Provided country code and calling code are conflicting",
  },
]
`;

exports[`Phone field metadata tests suite It should fail to create primary phone field with conflicting phone number calling code 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Provided and inferred calling code are conflicting",
  },
]
`;

exports[`Phone field metadata tests suite It should fail to create primary phone field with conflicting phone number calling code 2`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Provided and inferred calling code are conflicting",
  },
]
`;

exports[`Phone field metadata tests suite It should fail to create primary phone field with conflicting phone number country code 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Provided and inferred country code are conflicting",
  },
]
`;

exports[`Phone field metadata tests suite It should fail to create primary phone field with conflicting phone number country code 2`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Provided and inferred country code are conflicting",
  },
]
`;

exports[`Phone field metadata tests suite It should fail to create primary phone field with invalid calling code 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Invalid calling code +999",
  },
]
`;

exports[`Phone field metadata tests suite It should fail to create primary phone field with invalid calling code 2`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Invalid calling code +999",
  },
]
`;

exports[`Phone field metadata tests suite It should fail to create primary phone field with invalid country code 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Invalid country code XX",
  },
]
`;

exports[`Phone field metadata tests suite It should fail to create primary phone field with invalid country code 2`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Invalid country code XX",
  },
]
`;

exports[`Phone field metadata tests suite It should fail to create primary phone field with invalid phone number format 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Provided phone number is invalid not-a-number",
  },
]
`;

exports[`Phone field metadata tests suite It should fail to create primary phone field with invalid phone number format 2`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Provided phone number is invalid not-a-number",
  },
]
`;

exports[`Phone field metadata tests suite It should fail to create primary phone field without country or calling code at all 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Provided phone number is invalid 123456789",
  },
]
`;

exports[`Phone field metadata tests suite It should fail to create primary phone field without country or calling code at all 2`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Provided phone number is invalid 123456789",
  },
]
`;
